--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.17.3"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,6 @@
   "bugs": {
     "url": "https://github.com/gpaytakov/note-taker/issues"
   },
-  "homepage": "https://github.com/gpaytakov/note-taker#readme"
+  "homepage": "https://github.com/gpaytakov/note-taker#readme",
+  "keywords": []
 }
